--- a/style.css
+++ b/style.css
@@ -30,6 +30,7 @@ body {
   box-shadow: 0 0 1rem rgba(0, 0, 0, 0.2);
   font-size: 8vmin;
   color: black;
+  background-color: white;
 }
 #reset-btn {
   padding: 1rem;
