--- a/style.css
+++ b/style.css
@@ -63,3 +63,11 @@ body {
   background-color: black;
   color: white;
 }
+.player0 {
+  color: green;
+  background-color: #cefae5;
+}
+.playerX {
+  color: red;
+  background-color: rgb(255, 228, 228);
+}
